--- a/scss/defaults/_container.scss
+++ b/scss/defaults/_container.scss
@@ -1,5 +1,4 @@
 .container {
-    max-width: 100%;
     display: grid;
     place-items: center;
     gap: $margin-lg;
@@ -11,7 +10,7 @@
     
     @media (width >= 600px) {
         grid-template-columns: repeat(1, 1fr);
-        margin: $margin-lg;
+        margin: $padding-lg;
         border-radius: $border-radius-lg;
     }
 }
