--- a/scss/defaults/_form.scss
+++ b/scss/defaults/_form.scss
@@ -86,7 +86,7 @@
 
     .loading-form {
         font-size: 2rem;
-        animation: 3s infinite rotate;
+        animation: 2s infinite rotate linear;
         width: 2rem;
     }
 
