--- a/scss/defaults/_variables.scss
+++ b/scss/defaults/_variables.scss
@@ -11,8 +11,10 @@ $bg-third-color: #3b3b41;
 $text-color: #fff;
 $font-size: 62.5%;
 $font-family: "Poppins", sans-serif;
-$margin-lg: 5.4%;
-$margin-sm: 2.6%;
+$margin-lg: 2.4rem;
+$margin-sm: 1.6rem;
+$padding-lg: 5.4%;
+$padding-sm: 2.6%;
 $button-color: #9473e0;
 $button-hover: #8368c3;
 $button-disabled: #3d374a;
