--- a/scss/pages/_characters.scss
+++ b/scss/pages/_characters.scss
@@ -1,382 +1,133 @@
-@media (width <= 600px) {
-    .character {
-        min-width: 100%;
-        background-color: $bg-second-color;
-        height: fit-content;
-        border-radius: 1rem;
-        margin: 1rem 0;
-        box-sizing: border-box;
-        padding: 1rem;
-        gap: 1rem;
-
-        h4 {
-            font-family: 'Ringbearer', sans-serif;
-            font-size: 2.4rem;
-        }
-
-        a {
-            color: #9473e0;
-            font-size: 1.2rem;
-        }
-
-        div {
-            gap: 0.5rem;
-            align-items: center;
-        }
-    }
-
-    .character-grid {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        max-width: 80%;
-        margin: 0 auto;
-        gap: 2.4rem;
-        height: 100%;
-
-        a {
-            height: 100%;
-            width: 100%;
-        }
-    }
-
-.character-button {
-        border: none;
-        min-width: 100%;
-        margin: 1rem 0;
-        border-radius: 1rem;
-        box-sizing: border-box;
-        color: white;
-        background-color: $bg-second-color;
-        font-size: 3rem;
-        height: fit-content;
-        width: 5rem;
-        padding: 1rem;
-
-        &:hover,:active,:checked,:focus {
-            background-color: #372f43;
-            box-shadow: 0px 0px 5px 0px #695b8b;
-        }
-}
-    
-    .character-container {
-        min-width: 100%;
-        min-height: 100%;
-        margin-bottom: 12rem;
-    }
-    
-    .filter {
-        gap: 1.5rem;
-        max-width: 100%;
-        margin: 0 auto;
-        margin-top: $margin-lg;
-    
-        div > label {
-            font-size: 1.6rem;
-        }
-    }
-    
-    .search-container {
-        align-items: center;
-        max-width: 100%;
-        gap: 2rem;
-        justify-content: center;
-    
-        input {
-            background-color: $bg-second-color;
-            border: none;
-            box-sizing: border-box;
-            padding: 1rem;
-            font-size: 1.6rem;
-            border-radius: 0.5rem;
-            outline: none;
-            color: white;
-            max-width: 100%;
-    
-            &:hover,:active,:focus,:checked {
-                background-color: #372f43;
-                box-shadow: 0px 0px 5px 0px #695b8b;
-            }
-        }
-    }
-    
-    hr {
-        border: none;
-        border-top: 1px solid gray;
-        margin-top: $margin-lg;
-    }
-}
-
-.loading {
-    font-size: 4rem;
-    animation: 3s infinite rotate;
-    margin: 0 auto;
-    width: fit-content;
-    min-height: 100%;
-}
-
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@media (width > 600px) and (width < 840px) {
-    .character {
-        min-width: 100%;
-        background-color: $bg-second-color;
-        height: fit-content;
-        border-radius: 1rem;
-        margin: 1rem 0;
-        box-sizing: border-box;
-        padding: 1rem;
-        gap: 1rem;
-
-        h4 {
-            font-family: 'Ringbearer', sans-serif;
-            font-size: 2.4rem;
-        }
-
-        a {
-            color: #9473e0;
-            font-size: 1.2rem;
-        }
-
-        div {
-            gap: 0.5rem;
-            align-items: center;
-        }
-    }
-
-    .character-grid {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        max-width: 80%;
-        margin: 0 auto;
-        gap: 2.4rem;
-        height: 100%;
-
-        a {
-            height: 100%;
-            width: 100%;
-        }
-    }
-
-.character-button {
-        border: none;
-        min-width: 100%;
-        margin: 1rem 0;
-        border-radius: 1rem;
-        box-sizing: border-box;
-        color: white;
-        background-color: $bg-second-color;
-        font-size: 3rem;
-        height: fit-content;
-        width: 5rem;
-        padding: 1rem;
-
-        &:hover,:active,:checked,:focus {
-            background-color: #372f43;
-            box-shadow: 0px 0px 5px 0px #695b8b;
-        }
-}
-    
-    .character-container {
-        min-width: 100%;
-        min-height: 100%;
-        margin-bottom: 12rem;
-    }
-    
-    .filter {
-        gap: 1.5rem;
-        max-width: 100%;
-        margin: 0 auto;
-        margin-top: $margin-lg;
-    
-        div > label {
-            font-size: 1.6rem;
-        }
-    }
-    
-    .search-container {
-        align-items: center;
-        max-width: 100%;
-        gap: 2rem;
-        justify-content: center;
-    
-        input {
-            background-color: $bg-second-color;
-            border: none;
-            box-sizing: border-box;
-            padding: 1rem;
-            font-size: 1.6rem;
-            border-radius: 0.5rem;
-            outline: none;
-            color: white;
-            max-width: 100%;
-    
-            &:hover,:active,:focus,:checked {
-                background-color: #372f43;
-                box-shadow: 0px 0px 5px 0px #695b8b;
-            }
-        }
-    }
-    
-    hr {
-        border: none;
-        border-top: 1px solid gray;
-        margin-top: $margin-lg;
-    }
-}
-
-.loading {
-    font-size: 4rem;
-    animation: 3s infinite rotate;
-    margin: 0 auto;
-    width: fit-content;
-    min-height: 100%;
-}
-
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@media (width >= 840px) {
-    .hero-character {
-        margin-top: 2.5rem;
-        display: grid;
-        place-items: center;
-        align-content: center;
-        gap: 5rem;
-        margin: 5% 0;
-    
-        h1 {
-            font-size: 5rem;
-            font-family: 'Ringbearer';
-            text-align: center;
-            box-sizing: content-box;
-        }
-    }
-
-    .character {
-        min-width: 100%;
-        background-color: $bg-second-color;
-        height: fit-content;
-        border-radius: 1rem;
-        margin: 1rem 0;
-        box-sizing: border-box;
-        padding: 1rem;
-        gap: 1rem;
-
-        h4 {
-            font-family: 'Ringbearer', sans-serif;
-            font-size: 2.4rem;
-        }
-
-        a {
-            color: #9473e0;
-            font-size: 1.2rem;
-        }
-
-        div {
-            gap: 0.5rem;
-            align-items: center;
-        }
-    }
-
-.character-grid {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 1rem;
-
-    a {
-        width: fit-content;
-        height: fit-content;
-    }
-}
-
-.character-button {
-        border: none;
-        height: fit-content;
-        width: 5rem;
-        margin: 1rem 0;
-        border-radius: 1rem;
-        box-sizing: border-box;
-        color: white;
-        background-color: $bg-second-color;
-        font-size: 3rem;
-        padding: 1rem;
-
-        &:hover,:active,:checked,:focus {
-            background-color: #372f43;
-            box-shadow: 0px 0px 5px 0px #695b8b;
-        }
-}
-    
 .character-container {
-        width: 100%;
-        min-height: 100%;
-        margin-bottom: 12rem;
-}
-    
-    .filter {
-        gap: 1.5rem;
-        max-width: 100%;
-        margin: 0 auto;
-        margin-top: $margin-lg;
-        align-items: flex-start;
-    
-        div > label {
-            font-size: 1.6rem;
-        }
+    background-color: $bg-second-color;
+    box-sizing: border-box;
+    padding: $padding-lg;
+    width: 100%;
+    border-radius: $border-radius-lg;
+    display: flex;
+    flex-direction: column;
+    gap: $margin-sm;
+    font-size: $text-size-sm;
+
+    @media (width <= 600px) {
+        background-color: $bg-main-color;
+        padding: 0;
     }
-    
-    .search-container {
+
+    .character-grid {
+        display: flex;
         align-items: center;
-        max-width: 100%;
-        gap: 2rem;
-        justify-content: center;
-    
-        input {
-            background-color: $bg-second-color;
-            border: none;
-            box-sizing: border-box;
-            padding: 1rem;
-            font-size: 1.6rem;
-            border-radius: 0.5rem;
-            outline: none;
-            color: white;
+        box-sizing: border-box;
+        justify-content: space-between;
+        max-width: 60%;
+        background-color: $bg-third-color;
+        padding: $padding-sm;
+        border-radius: $border-radius-lg;
+
+        @media (width < 840px) {
+            max-width: 80%;
+        }
+
+        @media (width <= 600px) {
             max-width: 100%;
-    
-            &:hover,:active,:focus,:checked {
-                background-color: #372f43;
-                box-shadow: 0px 0px 5px 0px #695b8b;
+            background-color: $bg-second-color;
+        }
+
+        .character-button {
+            font-size: 3rem;
+        }
+
+        a {
+            color: $button-color;
+            text-decoration: none;
+            transition: 150ms ease;
+
+            &:hover {
+                color: $button-hover;
+            }
+        }
+
+        .character {
+            display: flex;
+            gap: 1rem;
+            width: 50%;
+
+            @media (width <= 600px) {
+                flex-direction: column;
+            }
+
+            h4 {
+                font-family: "Ringbearer", sans-serif;
+
+                @media (width >= 840px) {
+                    font-size: $text-size-lg;
+                }
             }
         }
     }
-    
-    hr {
-        border: none;
-        border-top: 1px solid gray;
-        margin-top: $margin-lg;
+}
+
+.filter {
+    background-color: $bg-second-color;
+    box-sizing: border-box;
+    padding: $padding-lg;
+    width: 100%;
+    border-radius: $border-radius-lg;
+
+    @media (width <= 600px) {
+        background-color: $bg-main-color;
+        padding: 0;
+    }
+
+    .search-container {
+        display: flex;
+        align-items: center;
+        gap: 1.5rem;
+
+        input {
+            background-color: $bg-third-color;
+            border: none;
+            box-sizing: border-box;
+            padding: 2rem;
+            border-radius: $border-radius-lg;
+            font-size: $text-size-sm;
+            outline: none;
+            color: $text-color;
+            transition: 150ms ease;
+
+            @media (width <= 600px) {
+                background-color: $bg-second-color;
+            }
+
+            &:hover,&:checked,&:active,&:focus {
+                background-color: #3e3e4e;
+            }
+        }
+
+        label > i {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+#back-icon {
+    font-size: 3rem;
+    color: white;
+    place-self: start;
+    box-sizing: border-box;
+    padding: $padding-sm;
+    background-color: $bg-second-color;
+    border-radius: $border-radius-lg;
+    transition: 150ms ease;
+
+    &:hover {
+        background-color: $button-color;
     }
 }
 
 .loading {
-    font-size: 4rem;
-    animation: 3s infinite rotate;
-    margin: 0 auto;
-    width: fit-content;
-    min-height: 100%;
+        font-size: 3rem;
+        animation: 2s infinite rotate linear;
 }
 
 @keyframes rotate {
