--- a/scss/pages/_details.scss
+++ b/scss/pages/_details.scss
@@ -2,9 +2,14 @@
     display: flex;
     flex-direction: column;
     font-size: 1.6rem;
-    gap: 1rem;
+    gap: 2rem;
+    line-height: 1.5;
     align-items: center;
     text-align: center;
+    background-color: $bg-second-color;
+    box-sizing: border-box;
+    padding: $padding-lg;
+    border-radius: $border-radius-lg;
 
     a {
         color: #9473e0;
@@ -28,17 +33,16 @@
 }
 
 #back {
-    background-color: $bg-second-color;
-    border: none;
+    font-size: 3rem;
+    color: white;
+    place-self: start;
     box-sizing: border-box;
-    padding: 1rem;
-    border-radius: 1rem;
-    min-width: 30%;
-    max-width: 40%;
-    font-size: 1.6rem;
+    padding: $padding-sm;
+    background-color: $bg-second-color;
+    border-radius: $border-radius-lg;
+    transition: 150ms ease;
 
-    &:hover,:active,:checked,:focus {
-        background-color: #372f43;
-        box-shadow: 0px 0px 5px 0px #695b8b;
+    &:hover {
+        background-color: $button-color;
     }
 }
