final changes maybe

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,3 +10,5 @@
 @import "../scss/defaults/card";
 @import "../scss/defaults/form";
 @import "../scss/defaults/topic";
+@import "../scss/pages/books";
+@import "../scss/pages/movies";
