--- a/scss/pages/_details.scss
+++ b/scss/pages/_details.scss
@@ -37,7 +37,7 @@
     color: white;
     place-self: start;
     box-sizing: border-box;
-    padding: $padding-sm;
+    padding: 2rem;
     background-color: $bg-second-color;
     border-radius: $border-radius-lg;
     transition: 150ms ease;
