--- a/css/main.css
+++ b/css/main.css
@@ -234,14 +234,24 @@ html {
 .filter {
   background-color: #2b2b30;
   box-sizing: border-box;
-  padding: 5.4%;
+  padding: 2rem 5.4%;
   width: 100%;
   border-radius: 1rem;
+  display: flex;
+  gap: 5rem;
+  align-items: center;
+  font-size: 1.6rem;
 }
 @media (max-width: 600px) {
   .filter {
     background-color: #1e1f24;
     padding: 0;
+  }
+}
+@media (max-width: 840px) {
+  .filter {
+    flex-direction: column;
+    gap: 2rem;
   }
 }
 .filter .search-container {
@@ -271,13 +281,75 @@ html {
 .filter .search-container label > i {
   font-size: 1.5rem;
 }
+.filter .race-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.6rem;
+  box-sizing: border-box;
+}
+.filter .race-container div {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  box-sizing: border-box;
+  padding: 2.6%;
+  border-radius: 1rem;
+  transition: 150ms ease;
+}
+.filter .race-container div:hover {
+  background-color: #5c5369;
+}
+.filter .race-container input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #9473e0;
+  border-radius: 50%;
+  margin: 0;
+}
+.filter .race-container input:checked {
+  outline: 1px solid #9473e0;
+  outline-offset: 3px;
+}
+.filter .race-container details {
+  background-color: #3b3b41;
+  box-sizing: border-box;
+  padding: 2rem;
+  border-radius: 1rem;
+}
+.filter .race-container details:hover, .filter .race-container details:checked, .filter .race-container details:active, .filter .race-container details:focus {
+  background-color: #3e3e4e;
+}
+.filter .race-container details summary {
+  list-style: none;
+}
+.filter .race-container details div {
+  margin-top: 0.5rem;
+}
+.filter button {
+  border: none;
+  box-sizing: border-box;
+  border-radius: 1rem;
+  background-color: #9473e0;
+  color: white;
+  font-size: 1.6rem;
+  padding: 2rem;
+  transition: 150ms ease;
+  height: 50%;
+}
+.filter button:hover {
+  background-color: #8368c3;
+}
 
 #back-icon {
   font-size: 3rem;
   color: white;
   place-self: start;
   box-sizing: border-box;
-  padding: 2.6%;
+  padding: 2rem;
   background-color: #2b2b30;
   border-radius: 1rem;
   transition: 150ms ease;
@@ -336,7 +408,7 @@ html {
   color: white;
   place-self: start;
   box-sizing: border-box;
-  padding: 2.6%;
+  padding: 2rem;
   background-color: #2b2b30;
   border-radius: 1rem;
   transition: 150ms ease;
@@ -565,4 +637,76 @@ html {
   .topics-container .topic {
     min-height: 10rem;
   }
+}
+.hero-book {
+  font-size: 2.4rem;
+  font-family: "Ringbearer", sans-serif;
+}
+
+.chapters {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: #2b2b30;
+  box-sizing: border-box;
+  padding: 2.6%;
+  border-radius: 1rem;
+  font-size: 1.6rem;
+}
+.chapters .chapter {
+  box-sizing: border-box;
+  padding: 1rem;
+  background-color: #3b3b41;
+  border-radius: 1rem;
+}
+
+#chapter-title {
+  font-size: 2.4rem;
+}
+
+#chapter-line {
+  width: 20rem;
+  margin-top: -1rem;
+}
+
+.hero-movie {
+  font-size: 2.4rem;
+  font-family: "Ringbearer", sans-serif;
+}
+
+.movie-info {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  gap: 1rem;
+  background-color: #2b2b30;
+  padding: 2.6%;
+  border-radius: 1rem;
+  line-height: 1.5;
+}
+.movie-info .scores {
+  background-color: #3b3b41;
+  box-sizing: border-box;
+  padding: 2.6%;
+  border-radius: 1rem;
+  display: flex;
+  gap: 3rem;
+  font-size: 1.6rem;
+  justify-content: center;
+}
+.movie-info .revenue {
+  background-color: #3b3b41;
+  box-sizing: border-box;
+  padding: 2.6%;
+  border-radius: 1rem;
+  font-size: 1.6rem;
+  text-align: center;
+}
+.movie-info .awards {
+  background-color: #3b3b41;
+  box-sizing: border-box;
+  padding: 2.6%;
+  border-radius: 1rem;
+  font-size: 1.6rem;
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
