structural change and fixed form validation

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,12 @@
-@import "../scss/defaults/reset";
-@import "../scss/defaults/variables";
-@import "../scss/defaults/layout";
-@import "../scss/components/navbar";
-@import "../scss/defaults/classes";
-@import "../scss/components/footer";
+@import "../scss/global/reset";
+@import "../scss/global/variables";
+@import "../scss/global/layout";
+@import "../scss/global/classes";
 @import "../scss/pages/characters";
 @import "../scss/pages/details";
-@import "../scss/defaults/container";
-@import "../scss/defaults/card";
-@import "../scss/defaults/form";
-@import "../scss/defaults/topic";
+@import "../scss/components/container";
+@import "../scss/components/card";
+@import "../scss/components/form";
+@import "../scss/components/topic";
 @import "../scss/pages/books";
 @import "../scss/pages/movies";
