--- a/css/main.css
+++ b/css/main.css
@@ -415,7 +415,7 @@ html {
   width: 100%;
   border: none;
   border-radius: 1rem;
-  height: 3rem;
+  height: 3.5rem;
   background-color: #3b3b41;
   outline: none;
   color: white;
@@ -444,14 +444,10 @@ html {
   flex-direction: column;
   gap: 2rem;
 }
-.form form #email-container div {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
 .form form #email-container button {
   width: 100%;
-  height: 3rem;
+  align-self: center;
+  height: 5rem;
   border-radius: 1rem;
   outline: none;
   border: none;
@@ -465,8 +461,15 @@ html {
   background-color: #8368c3;
 }
 .form form #email-container button:disabled {
+  width: 50%;
   background-color: #3d374a;
   color: gray;
+  cursor: not-allowed;
+}
+.form form #email-container div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 .form h2 {
   font-size: 2.4rem;
@@ -476,7 +479,7 @@ html {
   border: none;
   border-bottom: 1px solid white;
   width: 100%;
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 .form .loading-form {
   font-size: 2rem;
