--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -9,7 +9,7 @@
             width: 100%;
             border: none;
             border-radius: $border-radius-lg;
-            height: 3rem;
+            height: 3.5rem;
             background-color: $bg-third-color;
             outline: none;
             color: white;
@@ -42,32 +42,35 @@
             flex-direction: column;
             gap: 2rem;
 
+                button {
+                    width: 100%;
+                    align-self: center;
+                    height: 5rem;
+                    border-radius: $border-radius-lg;
+                    outline: none;
+                    border: none;
+                    background-color: $button-color;
+                    color: white;
+                    font-size: $text-size-sm;
+                    margin-top: 1rem;
+                    transition: 150ms ease;
+    
+                    &:hover {
+                        background-color: $button-hover;
+                    }
+    
+                    &:disabled {
+                        width: 50%;
+                        background-color: $button-disabled;
+                        color: gray;
+                        cursor: not-allowed;
+                    }
+                }
+
             div {
                 display: flex;
                 flex-direction: column;
                 gap: 0.5rem;
-            }
-
-            button {
-                width: 100%;
-                height: 3rem;
-                border-radius: $border-radius-lg;
-                outline: none;
-                border: none;
-                background-color: $button-color;
-                color: white;
-                font-size: $text-size-sm;
-                margin-top: 1rem;
-                transition: 150ms ease;
-
-                &:hover {
-                    background-color: $button-hover;
-                }
-
-                &:disabled {
-                    background-color: $button-disabled;
-                    color: gray;
-                }
             }
         }
     }
@@ -81,7 +84,7 @@
         border: none;
         border-bottom: 1px solid white;
         width: 100%;
-        margin: 1rem 0;
+        margin: 0.5rem 0;
     }
 
     .loading-form {
